# sionna-neural-ofdm-channel-estimation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
archive/learning-log/: day-01-notes.md  day-02-notes.md  day-03-notes.md  day-04-notes.md
archive/learning_log/: day-01-notes.md
data/: README.md
docs/: current-status.md  day-02-notes.md  day-03-notes.md  development-history.md  development_history.md  experiment-design.md  experiment_design.md  low-resource-framing.md  proposal-alignment.md  proposal_alignment.md  report.md
experiments/: README.md
experiments/baseline-ls/: config.yaml  run-experiment.py
experiments/baseline_ls/: config.yaml
experiments/grid-neural-comparison-v1/: config.yaml  run-experiment.py  run-sweep.py
experiments/grid-tdl-v1/: config.yaml  run-experiment.py
experiments/low-resource-v1/: config.yaml  run-experiment.py
notebooks/: 01-ofdm-system-overview.ipynb  01-sionna-setup-and-ofdm-intro.ipynb  01_ofdm_system_overview.ipynb  02-basic-ofdm-simulation-ipynb  02-ls-baseline-demo.ipynb  02_ls_baseline_demo.ipynb  03-dataset-exploration.ipynb  03-ls-channel-estimation.ipynb  03_dataset_exploration.ipynb  04-dataset-generation.ipynb  04-low-resource-experiment-demo.ipynb  04_low_resource_experiment_demo.ipynb  05-colab-grid-baseline.ipynb  README.md
results/: README.md
tests/: test-baselines.py  test-config.py  test-dataset.py  test-metrics.py  test-models.py  test-ofdm.py  test-sionna-ofdm.py  test-sweep.py  test_baselines.py  test_dataset.py  test_metrics.py
(+15 files in other folders)
