[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-estimation"
version = "0.1.0"
description = "Reproducible experiments for lightweight neural OFDM channel estimation in low-resource 6G-like environments."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Setor"}]
dependencies = [
  "numpy>=1.26,<2.1",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.15", "sionna>=1.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test-*.py"]
addopts = "-ra"
