[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-estimation"
version = "0.1.0"
description = "Reproducible experiments for lightweight neural OFDM channel estimation in low-resource 6G-like environments."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Setor"}]
dependencies = [
  "numpy>=2.2.6,<2.3",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = ["sionna>=2.0", "torch>=2.9", "numba>=0.60,<0.62"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test-*.py"]
addopts = "-ra"
